# opengl_animation_transitions

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/animation_transitions/: main.hpp
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: gl.h
libs/imgui_wrapper/: CMakeLists.txt
src/: CMakeLists.txt
src/animation_transitions/: main.cpp
tests/: CMakeLists.txt  glad.test.cpp  imgui.test.cpp
